--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
             <button type="submit">Entrar</button>            
         </div>
 	</form>
-	<div align="center">
+	<div class="alert alert-danger" role="alert">
         {% for message in messages %}
             <strong>Erro!: </strong>{{ message }}
         {% endfor %}
