--- a/templates/model-footer.html
+++ b/templates/model-footer.html
@@ -1,2 +1,8 @@
-
-<p>Desenvolvido por Elizeu Barbosa Abreu durante aulas do curso de <a href="https://web.digitalinnovation.one/course/desenvolvimento-para-internet-e-banco-de-dados-com-python-e-django">Desenvolvimento para Internet e bancos de Dados com Python e Django</a></p>
+<footer class="bg-light text-center text-lg-start fixed-bottom">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-dark" href="https://www.linkedin.com/in/elizeu-barbosa-abreu-69965b218/">Elizeu Barbosa Abreu</a>
+  </div>
+  <!-- Copyright -->
+</footer>
