--- a/templates/model-page.html
+++ b/templates/model-page.html
@@ -4,7 +4,10 @@
     {% include "model-header.html" %}
 </head>
 <body>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUIyJ" crossorigin="anonymous">
+    <div class="container">
     {% block content %}{% endblock %}
+    </div>
     {% include "model-footer.html" %}
 </body>
 </html>
