--- a/templates/evento.html
+++ b/templates/evento.html
@@ -3,25 +3,26 @@
 {% block content %}
 
 <form action="submit" method="POST"> {% csrf_token %}
-	<h2>Evento</h2>
-	<br>
+	<h2>Evento</h2>	
+	<div class="form-group">
 	<label>Título</label>
 	<input type="number" name="id_evento" value="{{ evento.id }}" hidden></input>
-	<br>
-	<input type="text" name="titulo" size="23" value="{{ evento.titulo }}">
-	<br>
+	<input class="form-control" type="text" name="titulo" value="{{ evento.titulo }}">
+	</div>
+	<div class="form-group">
 	<label>Data do Evento</label>
-	<br>
-	<input type="datetime-local" name="data_evento" value="{{ evento.get_data_input_evento }}">
-	<br>
+	<input class="form-control" type="datetime-local" name="data_evento" value="{{ evento.get_data_input_evento }}">
+	</div>
+	<div class="form-group">
 	<label>Descrição</label>
-	<br>
-	<textarea name="descricao" rows="5" cols="24">{{ evento.descricao }}</textarea>
-	<br><br>
-	<button type="submit">Salvar</button>
+	<textarea class="form-control" name="descricao">{{ evento.descricao }}</textarea>
+	</div>
+	<div class="btn-group" role="group" aria-label="Basic example">
+	<button type="submit" class="btn btn btn-success">Salvar</button>
 	<a href="/" >
-		<button type="button">Cancelar</button>
+		<button type="button" class="btn btn-warning">Cancelar</button>
 	</a>
+	</div>
 </form>
 
 {% endblock %}
